# wland

./: .gitignore  AGENTS.md  Cargo.toml  MOCKUP.md  PLANNING.md  README.md  TODO.md  flake.nix  pyproject.toml
.direnv/: flake-profile-1-link  flake-profile-10-link  flake-profile-2-link  flake-profile-5-link  flake-profile-8-link
agents/plans/: 24-05-26-getting-started.md  24-05-26-hw-contracts.md  24-05-26-initial-models.md
agents/spec/: 01-mvp-spec.md  02-mvp-contracts.md  03-mcp-project.md  03-mvp-project.md  04-mvp-cli.md  05-mvp-hw-contracts.md  05-testing-directive.md
scripts/: test
src/: lib.rs  main.rs
src/bss/: cli.rs  schema.rs
src/clients/: schema.rs
src/common/: contracts.rs  errcodes.rs  exceptions.rs  mod.rs  schemas.rs
src/dbus/: schema.rs
src/dhcp/: schema.rs
src/firewall/: schema.rs
src/lan/: cli.rs  schema.rs
src/link/: cli.rs  mod.rs  schema.rs
src/logs/: schema.rs
src/mgmt/: schema.rs
src/nl8023/: schemas.rs
src/phy/: cli.rs  mod.rs  schema.rs  service.rs
src/rtnet/: cli.rs  mod.rs  schema.rs
src/wan/: cli.rs  mod.rs  schema.rs
src/wlan/: cli.rs  schema.rs
src/wland/: cli.rs  mod.rs  schema.rs
tests/units/: 10-test-pyproject.py  11-run-cli.py  12-test-link.py  13-test-phy.py
