[package]
name = "wland"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
ipnet = { version = "2", features = ["serde"] }
netlink-packet-route = "0.19"
rtnetlink = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
